--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@tybys/jscpp",
   "main": "cgen.config.js",
   "scripts": {
-    "configure": "cgen configure",
-    "configure:debug": "cgen configure --debug",
+    "configure": "cgen configure -CBUILD_GMOCK=OFF -CINSTALL_GTEST=OFF",
+    "configure:debug": "cgen configure --debug -CBUILD_GMOCK=OFF -CINSTALL_GTEST=OFF",
     "build": "cgen build",
     "build:debug": "cgen build --debug",
     "clean": "cgen clean",
-    "rebuild": "cgen rebuild",
-    "rebuild:debug": "cgen rebuild --debug"
+    "rebuild": "cgen rebuild -CBUILD_GMOCK=OFF -CINSTALL_GTEST=OFF",
+    "rebuild:debug": "cgen rebuild --debug -CBUILD_GMOCK=OFF -CINSTALL_GTEST=OFF"
   }
 }
