--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Windows",
       "type": "cppvsdbg",
       "request": "launch",
-      "program": "${workspaceFolder}\\.cgenbuild\\Debug\\jscpptest.exe",
+      "program": "${workspaceFolder}\\.cgenbuild\\Debug\\test.exe",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
@@ -18,7 +18,7 @@
       "name": "Linux",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${workspaceFolder}/.cgenbuild/Debug/jscpp",
+      "program": "${workspaceFolder}/.cgenbuild/Debug/test",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
